dev-containerの設定メモ作成

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "osbook"]
 	path = osbook
 	url = ./osbook
+[submodule "mikanos-devcontainer"]
+	path = mikanos-devcontainer
+	url = ./mikanos-devcontainer
